--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 .bgtop-card{
     width: 100%;
     height: 130px;
-    background-image: url(/images/bg-pattern-card.svg);
+    background-image: url(images/bg-pattern-card.svg);
 }
 .info{
     position: relative;
@@ -36,7 +36,7 @@ body{
     left: 50%;
     top: -50px;
     transform: translateX(-50%);
-    background-image: url(/images/image-victor.jpg);
+    background-image: url(images/image-victor.jpg);
     border-radius: 50%;
     border: 4px  solid white;
     
